--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,6 @@ plugins {
     id 'kotlin-android'
 }
 
-apply plugin: 'kotlin-kapt'
-
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -38,7 +36,6 @@ android {
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -51,15 +48,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    def room_version = "2.2.6"
+    implementation 'com.google.android.libraries.maps:maps:3.1.0-beta'
 
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'com.google.android.gms:play-services-gcm:17.0.0'
+    implementation 'com.google.auto.value:auto-value-annotations:1.6.2'
 
+    implementation "androidx.room:room-runtime:2.2.6"
     // optional - Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:$room_version"
-
+    implementation "androidx.room:room-ktx:2.2.6"
     // optional - Test helpers
-    testImplementation "androidx.room:room-testing:$room_version"
+    testImplementation "androidx.room:room-testing:2.2.6"
 }
