--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         </service>
 
 
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCxm3y9G6YAgyTSz4g7pjMKFpyyLboxkyE"/>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCxm3y9G6YAgyTSz4g7pjMKFpyyLboxkyE"/>
 
     </application>
 
